<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textV_ContP_saudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textV_ContP_saudacao"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/text_Contp_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textV_contP_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textV_contP_saldo"
            android:textColor="@android:color/white"
            android:textSize="14dp" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calen_Contp_calendarView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:mcv_selectionColor="#00F"
        app:mcv_showOtherDates="all"
        app:mcv_tileSize="50dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_Contp_movimentacoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>