<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ReceitaActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryR"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_receita_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_receita_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_exemplo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_receita_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salário_exemplo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_receita_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/salário_descricao_exemplo" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_receita_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="1"
            android:background="@color/colorAccentR"
            android:clickable="true"
            android:onClick="salvarReceita"
            app:srcCompat="@drawable/ic_receita_check_24" />
    </FrameLayout>

</LinearLayout>