<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CadastroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_cadastro_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textV_cadastro_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textV_cadastro_principal"
            android:textColor="@color/colorTexteBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_cadastro_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/ic_edit_nome_24"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="Nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_cadastro_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/ic_edit_email_24"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="E-mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_cadastro_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/ic_edit_senha_24"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="Senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/bt_cadastro_principal"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_cadastro_termos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorAccentR"
            android:layout_marginTop="10dp"
            android:text="@string/textV_cadastro_termos" />
    </LinearLayout>
</LinearLayout>